# liz-desktop-pyside6

./: .gitignore  README.md  build.sh  main.py  requirements.txt
.github/workflows/: release.yml
bluebird/: Cargo.toml  pyproject.toml
bluebird/src/: flute.rs  lib.rs
bluebird/src/tools/: db.rs  exec.rs  mod.rs  rhythm.rs  utils.rs
data/: music_sheet.lock.json  rhythm.toml
data/sheets/: blender.json  examples.json
scripts/: parse_shortcuts.py  update_aur.sh
theme/: dark.qss  light.qss
windows/: base.py  cmd_manager_window.py  config_window.py  main_window.py  signals.py
