[package]
name = "bluebird"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bluebird"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.3.0"
toml = "0.8"
uuid = { version = "1.15.1", features = ["v4"] }
